--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "google-cloud-bigquery>=3.40.0",
+    "google-cloud-storage>=3.8.0",
+    "polars>=1.37.1",
+    "pydantic>=2.12.5",
+]
