Add GCSHandler integration and update test configurations; refactor container and pytest setup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ dev-dependencies = [
     "pytest>=9.0.2",
     "ruff>=0.14.13",
 ]
+
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = [".", "src"]
+addopts = "-v"
