Update testing configuration and enhance GCSHandler tests; add new test cases and remove unused files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "**/Thumbs.db": true,
         "**/__pycache__": true,
         "**/*.pyc": true,
-        "**/.venv": true
+        "**/.venv": true,
+        "**/.pytest_cache": true
     }
 }
