--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google-cloud-storage>=3.8.0",
     "loguru>=0.7.3",
     "polars>=1.37.1",
+    "pyarrow>=23.0.0",
     "pydantic-settings>=2.12.0",
     "pydantic>=2.12.5",
 ]
