Add Cloud Build configuration and update IAM roles for artifact registry

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
         "**/__pycache__": true,
         "**/*.pyc": true,
         "**/.venv": true,
-        "**/.pytest_cache": true
+        "**/.pytest_cache": true,
+        "**/.ruff_cache": true
     }
 }
