--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dependency-injector>=4.48.3",
+    "fastapi>=0.128.0",
     "google-cloud-bigquery>=3.40.0",
     "google-cloud-storage>=3.8.0",
     "loguru>=0.7.3",
@@ -13,6 +14,7 @@ dependencies = [
     "pyarrow>=23.0.0",
     "pydantic-settings>=2.12.0",
     "pydantic>=2.12.5",
+    "typer>=0.21.1",
 ]
 
 [tool.uv]
